--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "homepage": "https://sphiri1.github.io/face-recognition",
   "private": true,
   "dependencies": {
+    "@firebase/firestore": "^3.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "clarifai": "2.7.0",
+    "clarifai": "^2.7.0",
+    "firebase": "^9.17.1",
+    "firebaseui": "^6.0.2",
     "gh-pages": "^5.0.0",
     "particles-bg": "^2.5.5",
     "react": "^18.2.0",
